# ladspa-plugins-in-rust

./: .gitignore  README.md  analysis.ipynb  apply_delay.sh
c/: Makefile  README.md  delay_stereo.c
rust/: Cargo.toml  README.md
rust/src/: lib.rs
